@startuml Database

/' SEC Fund Factsheet API 01 y'/
entity MutualFundEntity {
    *unique_id : string
    /' รหัสบลจ '/
    --
    last_upd_date : Date
    name_th : string
    name_en : string
    active : boolean
}

entity MutualFundEntitySocialMedia {
    *unique_id : string
    *platform_name : string
    *platform_account_name : string
    --
    platform_url : string
    last_upd_date: Date
}

/' SEC Fund Factsheet API 02 y'/
entity Funds {
    * proj_id: string
    --
    last_upd_date: Date
    regis_id: string
    regis_date: string
    cancel_date: string
    proj_name_th: string
    proj_name_en: string
    proj_abbr_name: string
    fund_status: string
    /'สถานะกอง
    SE = อนุมัติ(อยู่ระหว่าง Filing)
    EX = หมดเวลาเสนอขาย
    RG = จดทะเบียน
    CA = เลิกโครงการ
    LI = จดทะเบียนเลิก '/
    permit_us_investment: string
    invest_country_flag: string
    /' การลงทุนต่างประเทศ
	1 = กองทุนรวมที่เน้นลงทุนแบบมีความเสี่ยงต่างประเทศ
	2 = ลงทุนในต่างประเทศบางส่วน
	3 = กองทุนที่ลงทุนแบบไม่มีความเสี่ยงต่างประเทศ
	4 = กองทุนที่ลงทุนแบบมีความเสี่ยงทั้งในและต่างประเทศ '/
    --
    * MutualFundEntity.unique_id : string <<FK>>
}

/' SEC Fund Factsheet API 04 y'/
entity FundFactSheet {
    * last_upd_date: Date
    * proj_id: string <<FK>>
    --
    url_halfyear_report: string
    url_annual_report: string
    url_factsheet: string
}

/' SEC Fund Factsheet API 07 '/
entity FundProjectInfo {
    * last_upd_date: Date
    * proj_id: string <<FK>>
    --
    proj_retail_type: string
    /'     ลักษณะโครงการ -- R , A , N , G , X, H , {null}  
    A กองทุนรวมที่เสนอขายเฉพาะผู้ลงทุนที่มิใช่รายย่อย
    B กองทุนรวมที่เสนอขายเฉพาะผู้มีเงินลงทุนสูง
    G กองทุนรวมพิเศษเพื่อตอบสนองนโยบายภาครัฐ
    H กองทุนรวมที่เสนอขายผู้ลงทุนที่มิใช่รายย่อยและผู้มีเงินลงทุนสูง
    N กองทุนเพื่อผู้ลงทุนสถาบัน
    R กองทุนเพื่อผู้ลงทุนทั่วไป
    X กองทุนรวมที่เสนอขายผู้ลงทุนสถาบันและผู้ลงทุนรายใหญ่พิเศษ  '/
    proj_term_flag: boolean
    proj_term_dd: string
    proj_term_mm: string
    proj_term_yy: string
}

/' SEC Fund Factsheet API 08 '/
entity FundPolicies {
    * last_upd_date: Date
    * proj_id: string <<FK>>
    --
    policy_desc: string
    investment_policy_desc: string (fromBase64)
    management_style: string
    /' กลยุทธ์การบริหารจัดการกองทุน (Management Style) AM = มุ่งหวังให้ผลประกอบการสูงกว่าดัชนีชี้วัด (active management) BH = มีกลยุทธ์การลงทุนครั้งเดียว (buy-and-hold) SM = มุ่งหวังให้ผลประกอบการเคลื่อนไหวตามดัชนีชี้วัด และในบางโอกาสอาจสร้างผลตอบแทนสูงกว่าดัชนีชี้วัด OT = อื่น ๆ PM = มุ่งหวังให้ผลประกอบการเคลื่อนไหวตามดัชนีชี้วัด (passive management/index tracking) '/
}

/' SEC Fund Factsheet API 12 y'/
entity FundSuitability {
    * last_upd_date: Date
    * proj_id: string <<FK>>
    --
    fund_suitable_desc:string (fromBase64)
    fund_not_suitable_desc: string (fromBase64)
    important_notice: string (fromBase64)
    risk_spectrum_desc: string (fromBase64)
    risk_spectrum: string
    /' Risk Spectrum: 1 - 8+ '/
}

/' SEC Fund Factsheet API 18 y'/
entity FundBenchmark {
    * last_upd_date: Date
    * proj_id: string <<FK>>
    --
    group_seq: string
    benchmark: string
}

/' SEC Fund Daily Info API 01 y'/
entity FundDailyInfo {
    * nav_date: Date
    /' Net Asset Value Date '/
    * proj_id: string <<FK>>
    --
    net_asset: numeric
    last_val: numeric
}

/' Entity Relations '/
MutualFundEntity ||..o{ Funds
MutualFundEntity ||..o{ MutualFundEntitySocialMedia
Funds ||..o{ FundDailyInfo
Funds ||..o{ FundPolicies
Funds ||..o{ FundBenchmark
Funds ||..o{ FundSuitability
Funds ||..o{ FundFactSheet
Funds ||..o{ FundProjectInfo

@enduml